# house-monitor

./: .gitignore  Cargo.toml  README.md  bmp.gdb
.cargo/: config.toml
hvac/: Cargo.toml
hvac/src/: honeywell_tz4.rs  hvac.rs  lib.rs
hvac_limpet/: Cargo.toml  README.md  memory.x
hvac_limpet/.cargo/: config.toml
hvac_limpet/src/: app.rs  main.rs  secrets.rs  transport.rs
src/: blinker.rs  main.rs  secrets.rs
