[package]
edition = "2021"
name = "hvac_limpet"
version = "0.1.0"
authors = ["Steve Work <steve@work.renlabs.com>"]
resolver = "2"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.7", features = [ "defmt", "task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-sync = { version = "0.6", features = ["defmt"] }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
cortex-m = { version = "0.7.6" }
embassy-rp = { version = "0.3", features = [ "rp2040", "defmt", "unstable-pac", "time-driver", "critical-section-impl", "binary-info" ] }

cyw43 = { version="0.3.0", features = ["defmt"]}
cyw43-pio = { version="0.3.0", features = ["defmt"]}
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }

# recommended at https://embassy.dev/book/#_why_is_my_binary_so_big
[profiles]
lto = true
opt-level = "1"
incremental = false
codegen-units = 1
debug = true

# and for extra fun (from the same place)
[unstable]
build-std = ["core"]
build-std-features = ["panic_immediate_abort"]